<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bible</string>

    <string name="activity_bookmarks">Bookmarks</string>
    <string name="activity_manage_translation">Translations</string>
    <string name="activity_notes">Notes</string>
    <string name="activity_open_source_license">Open Sources Licenses</string>
    <string name="activity_reading_progress">Reading Progress</string>
    <string name="activity_settings">Settings</string>

    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_copy">Copy</string>
    <string name="action_clear_search_history">Delete Search History</string>
    <string name="action_delete_translation">Delete</string>
    <string name="action_notes">Notes</string>
    <string name="action_reading_progress">Reading Progress</string>
    <string name="action_remove_ads">Remove Ads</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="dialog_translation_delete_confirm_message">Are you sure to delete this translation?</string>
    <string name="dialog_logout_confirm_message">Are you sure to logout?</string>

    <string name="error_unknown_error">Unknown error.</string>
    <string name="error_no_translation">No translation available, download now?</string>
    <string name="error_failed_to_load">Fail to load, retry?</string>
    <string name="error_network">Fail to load, please check your network connection and retry.</string>
    <string name="error_failed_to_remove">Failed to remove the translation, try again?</string>

    <string name="pref_account">Account</string>
    <string name="pref_login">Log In</string>
    <string name="pref_login_description">Sync Everything</string>
    <string name="pref_logout">Log Out</string>
    <string name="pref_reading">Reading</string>
    <string name="pref_simple_reading">Simple Reading</string>
    <string name="pref_daily_verse">Verse of the Day</string>
    <string name="pref_night_mode">Night Mode</string>
    <string name="pref_rate_me">Rate me on Google Play</string>
    <string name="pref_screen_on">Screen On</string>
    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_size_dialog_title">Select Text Size:</string>
    <string name="pref_text_size_very_small">Very Small</string>
    <string name="pref_text_size_small">Small</string>
    <string name="pref_text_size_medium">Medium</string>
    <string name="pref_text_size_large">Large</string>
    <string name="pref_text_size_very_large">Very Large</string>
    <string name="pref_version">Version</string>
    <string name="pref_license">Open Source Licenses</string>
    <string name="pref_display">Display</string>
    <string name="pref_about">About</string>
    <string name="pref_invite_friends">Invite Friends</string>

    <string name="progress_dialog_translation_deleting">Deleting&#8230;</string>
    <string name="progress_dialog_translation_downloading">Downloading&#8230;</string>
    <string name="progress_dialog_login">Login&#8230;</string>
    <string name="progress_dialog_logout">Logout&#8230;</string>

    <string name="text_invite_friends_message">Great Bible reading app.</string>

    <string name="text_available_translation_info">%1$s\nSize: %2$d KB</string>

    <string name="text_downloaded_translations">Downloaded Translations</string>
    <string name="text_more_translations">More</string>
    <string name="text_new_translation">New Translation</string>
    <string name="text_new_translation_available">%1$s is now available!</string>
    <string name="text_share_with">Share with&#8230;</string>

    <string name="text_continuous_reading">Consecutive Reading</string>
    <string name="text_continuous_reading_count">%1$d day(s)</string>
    <string name="text_chapters_read">Chapters Read</string>
    <string name="text_finished_books">Books Finished</string>
    <string name="text_finished_old_testament">Old Testament</string>
    <string name="text_finished_new_testament">New Testament</string>
    <string name="text_last_read_chapter">You last read chapter %1$d, on %2$s.</string>

    <string name="text_no_bookmark">No bookmarks yet.</string>
    <string name="text_no_note">No notes yet.</string>

    <string name="text_login">Log In</string>
    <string name="text_login_description">Log in to have your bookmarks, notes, etc. synced.</string>

    <!--
    %1$d: date, %2$s: month, %3$d: year
     -->
    <string name="text_date">%1$d %2$s, %3$d</string>
    <string name="text_date_without_year">%1$d %2$s</string>
    <string-array name="text_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="text_bookmark">Bookmark</string>
    <string name="text_note">Note</string>

    <string name="toast_translation_deleted">Deleted.</string>
    <string name="toast_translation_downloaded">Downloaded.</string>
    <string name="toast_verses_copied">Copied to clipboard.</string>
    <string name="toast_verses_searched">%1$d result(s) found.</string>

</resources>
